tests/negative/parser_bad9.sp
(* unclosed quotes on string *)


a : String = "abcbasdaojdalsijdlas;

main : Int () {
	return 0;
}
